kubernetes/infrastructure/observability/dashboards/kiali/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiali
  namespace: istio-system
  labels:
    app.kubernetes.io/name: kiali
    app.kubernetes.io/version: v2.4.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kiali
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kiali
    spec:
      serviceAccountName: kiali
      containers:
        - name: kiali
          image: quay.io/kiali/kiali:v2.24.0@sha256:744439cbdbbc23c7a5d70544911abf8fe0b32c88c082e9a41ae6b50748bf736e
          ports:
            - name: api-port
              containerPort: 20001
            - name: http-metrics
              containerPort: 9090
          command:
            - "/opt/kiali/kiali"
            - "-config"
            - "/kiali-configuration/config.yaml"
          volumeMounts:
            - name: kiali-configuration
              mountPath: /kiali-configuration
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: kiali-configuration
          configMap:
            name: kiali
