kubernetes/infrastructure/observability/dashboards/kiali/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Kiali
    gethomepage.dev/description: Istio Service Mesh (VPN)
    gethomepage.dev/group: Observability
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - "kiali.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kiali-basic-auth
  namespace: istio-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kiali
  basicAuth:
    users:
      name: kiali-basic-auth
